[project]
name = "resume-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
]
